# Claude-Orchestrator-AI-Evolution

./: .gitignore  AUDIT-REPORT-V12.1.md  CHANGELOG.md  CLAUDE.md  INVENTORY_AGENTI_COMPLETO.md  README.md  TODOLIST.md  VERSION.json  coverage.json  mcp-needs-auth-cache.json  orchestrator-manifest.json  package-lock.json  settings-anthropic.json  settings-cca.json  settings-ccg.json  settings-glm.json  settings.json
plugins/orchestrator-plugin/: .github_setup.txt  .mcp.json  .pre-commit-config.yaml  CODE_QUALITY_REPORT.md  FIXES_IMPLEMENTATION_REPORT.md  FIX_INSTRUCTIONS.md  FIX_REPORT_PRIORITY_BUGS_V12.6.1.md  MODEL_ALIGNMENT_FIX.md  MODEL_FIX_REPORT.md  Makefile  ORCHESTRATOR_COMPLETE_ANALYSIS.md  ORCHESTRATOR_GLOBAL_ANALYSIS.md  ORCHESTRATOR_V12.6.1_COMPLETE_ANALYSIS.md  ORCHESTRATOR_V12.6.1_DEEP_ANALYSIS.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_SUMMARY.md  README.md  TEST_COVERAGE_REPORT.md  TEST_FIX_REPORT.md  coverage.xml  install.ps1  install.sh  pyproject.toml  test_keyword_matching.py  tsconfig.json
plugins/orchestrator-plugin/.claude-plugin/: marketplace.json
plugins/orchestrator-plugin/.claude-plugin/agents/: analyzer.md  coder.md  documenter.md  fallback.md  generalist.md  orchestrator-supremo.md  refactorer.md
plugins/orchestrator-plugin/.claude-plugin/hooks/: auto-orchestrate.md
plugins/orchestrator-plugin/.orchestrator/progress/: display.py
plugins/orchestrator-plugin/commands/: orchestrator-config.js  orchestrator-status.js
plugins/orchestrator-plugin/config/: agent-permissions.json  agent-registry.json  keyword-mappings.json  model-defaults.json  orchestrator-config.json
plugins/orchestrator-plugin/config/analysis/: context-rules.json  synonyms.json
plugins/orchestrator-plugin/coverage/: index.html
plugins/orchestrator-plugin/coverage/src/: test-orchestrator.ts.html
plugins/orchestrator-plugin/data/: sessions.json
plugins/orchestrator-plugin/docs/: CCH_IMPLEMENTATION_GUIDE.md  DETAILED_ANALYSIS_REPORT.md  DIAGNOSI-ORCHESTRATOR.md  FINAL_DOCUMENTATION.md  INTEGRATIONS.md  ORCHESTRATOR_v3.2_README.md  README.md
plugins/orchestrator-plugin/docs/CCH/: CCH_MIGRATION_VISUAL_SUMMARY.md
plugins/orchestrator-plugin/docs/analysis/: FALLBACK-SYSTEM-ANALYSIS-SUMMARY.md  VISUAL-ANALYSIS-SUMMARY.md
plugins/orchestrator-plugin/docs/changelogs/: ORCHESTRATOR_CHANGELOG.md  ORCHESTRATOR_V8_MCP_INTEGRATION.md
plugins/orchestrator-plugin/docs/legacy/: DELIVERABLES_SUMMARY.md  MCP_INTEGRATION_GUIDE.md  NEXT_GENERATION_PARALLEL_SYSTEM.md  PRD.md  SERENA_INTEGRATION_GUIDE.md  TECHNICAL_SPEC.md  _DA_ELIMINARE.md
plugins/orchestrator-plugin/docs/official/: DOCUMENTATION_INDEX.md  DOCUMENTATION_SCHEMA.json  INCONSISTENCY_REPORT.md  README_OFFICIAL.md  SESSION_2026-02-01.md
plugins/orchestrator-plugin/docs/reports/: CONSOLIDATION_EXECUTION_REPORT.md  CSS_FIX_SUMMARY.md  ORCHESTRATION_COMPLETION_REPORT.md  REORGANIZATION_REPORT.md
plugins/orchestrator-plugin/mcp_server/: INTEGRATION_TEST.md  LICENSE  MANIFEST.in  PROFILE_DETECTOR_README.md  __init__.py  activation.py  agent_permissions.py  auto_promotion.py  context_scorer.py  context_tiers.py  model_selector.py  model_selector_sync.py  profile_detector.py  push_to_github.sh  pyproject.toml  run_fixed_server.py  server.py  session_manager.py  session_resume.py  test_profile_detector.py  test_profile_switch.py  version.py
plugins/orchestrator-plugin/planning/: ORCHESTRATION_CONTEXT_HISTORY.md  ORCHESTRATION_TODOLIST.md
plugins/orchestrator-plugin/scripts/: create-plugin-package.js  plugin-installer.d.ts.map  plugin-installer.js.map  plugin-installer.ts  verify.ts
plugins/orchestrator-plugin/skills/orchestrator/: expert-injector.md
plugins/orchestrator-plugin/src/: clean-context.ts  index.ts  run-integrated-stress-test.ts  smart-model-selector.ts  task-analyzer.ts  types-unified.ts  types.ts
plugins/orchestrator-plugin/src/analysis/: README.md  analysis-engine.ts  index.ts  types.ts
plugins/orchestrator-plugin/src/analytics/: AnalyticsEngine.ts  SearchPoweredAnalytics.ts
plugins/orchestrator-plugin/tests/: README-STRESS-TESTS.md  SerenaIntegrationTest.d.ts  SerenaIntegrationTest.js.map  UltraResilientTesting.d.ts.map  UltraResilientTesting.js.map  UltraResilientTesting.ts  conftest.py  end-to-end-test.d.ts  end-to-end-test.js.map  end-to-end-test.ts  performance-benchmarks.js.map  stress-test-suite.ts  test___init__.py  test_activation.py  test_agent_permissions.py  test_auto_promotion.py  test_context_scorer.py  test_context_tiers.py  test_model_selector.py  test_model_selector_sync.py  test_run_fixed_server.py  test_server.py  test_session_manager.py  test_session_resume.py  test_version.py  unit-tests.spec.d.ts  unit-tests.spec.d.ts.map
(+772 files in other folders)
