[project]
name = "orchestrator-mcp-server"
version = "12.6.1"
description = "Multi-agent orchestrator MCP server for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
    "coverage[toml]>=7.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# === RUFF CONFIGURATION ===
[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B028",   # No explicit stacklevel keyword argument found
    "SIM108", # Use ternary operator
    "ARG001", # Unused function argument (needed for interfaces)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports
"tests/*" = ["S101"]       # Allow assert in tests

[tool.ruff.isort]
known-first-party = ["mcp_server"]

# === MYPY CONFIGURATION ===
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Progressive: change to true later
disallow_incomplete_defs = false  # Progressive: change to true later
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "mcp_server.server"
ignore_errors = true  # server.py has complex imports

# === PYTEST CONFIGURATION ===
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=mcp_server",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]
asyncio_mode = "auto"

# === COVERAGE CONFIGURATION ===
[tool.coverage.run]
source = ["mcp_server"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstract",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# === BANDIT CONFIGURATION (Security) ===
[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # Allow assert in non-production code
