[project]
name = "orchestrator-mcp-server"
version = "2.1.0"
description = "MCP server for Claude Code Orchestrator Plugin - Always On Auto-Orchestration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "LeoDg", email = "leo@example.com"}
]
keywords = ["mcp", "claude", "orchestrator", "multi-agent", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
orchestrator-mcp = "server:main"

[project.urls]
Homepage = "https://github.com/LeoDg/orchestrator-mcp-server"
Repository = "https://github.com/LeoDg/orchestrator-mcp-server.git"
Issues = "https://github.com/LeoDg/orchestrator-mcp-server/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
